--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^4.9.5",
