--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
